src/test/InvalidVariadic2/InvalidVariadic2.expected
error: InvalidVariadic2.panda:4:1: '...' may not be used with non-variadic method nonVariadic(a:panda.collections.Array<panda.core.Int32>)
1 error
