src/test/InvalidVariadic2/InvalidVariadic2.panda
method nonVariadic(a:Array<Int>) {
}

nonVariadic([1, 2, 3]...)
